--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,12 @@
   padding: 0;
   font-family: "Poppins", sans-serif;
 }
+
+body {
+  background-color: #14121c;
+  color: #f2f1f3;
+}
+
+a {
+  color: #f2f1f3;
+}
