--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   font-family: "Poppins", sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: #14121c;
   color: #f2f1f3;
