--- a/src/App.css
+++ b/src/App.css
@@ -26,17 +26,17 @@ html {
 }
 
 body {
-  background-color: #14121c;
-  color: #f2f1f3;
+  background-color: #ffffff;
+  color: #242424;
   font-size: 93.75%;
 }
 
 a {
-  color: #f2f1f3;
+  color: #242424;
   text-decoration: none;
 }
 
 p,
 span {
-  color: #aca9b9;
+  color: #636363;
 }
